tests/integration/errors/test_main_args_wrong_type.sn
# Error test: main with wrong parameter type (should be str[], not int[])

fn main(args: int[]): void =>
    print("Should not compile\n")
